--- a/configuration/logs.mdx
+++ b/configuration/logs.mdx
@@ -41,8 +41,8 @@ We do not currently allow changing the log level for deployments. Deployments us
 ## Custom logging setup
 
 If you opt-out of the default subscriber, you can set up logging or tracing the way you would in any other Rust application.
-Shuttle will record any ouput written to `stdout`, so as long as your set up writes to `stdout` you can set it up however you
-want. 
+The only thing you need to ensure is that your setup writes to `stdout`, as this is what Shuttle will record and return for
+the `cargo shuttle logs` commands.
 
 We've created an example Axum app with a simple `tracing` setup here: TODO: update this link: https://github.com/shuttle-hq/shuttle-examples/pull/84.
 
