--- a/configuration/ci-cd.mdx
+++ b/configuration/ci-cd.mdx
@@ -7,7 +7,9 @@ Shuttle currently provides one GitHub Action for automating deployments.
 
 ## GitHub Deploy Action
 
-[How to use and Options here.](https://github.com/shuttle-hq/deploy-action#readme)
+![GitHub Action runs with Shuttle deployments](/images/shuttle-deploy-action.png)
+
+[How to use and options here](https://github.com/shuttle-hq/deploy-action#readme).
 
 This action can run the `cargo shuttle deploy` command for you, enabling continuous deployments on every push.
 
