remove almost all mentions of static-folder, update pages

--- a/examples/axum-static-files.mdx
+++ b/examples/axum-static-files.mdx
@@ -17,14 +17,10 @@ async fn hello_world() -> &'static str {
 }
 
 #[shuttle_runtime::main]
-async fn axum(
-    // Name your static assets folder by passing `folder = <name>` to `StaticFolder`
-    // If you don't pass a name, it will default to `static`.
-    #[shuttle_static_folder::StaticFolder(folder = "assets")] static_folder: PathBuf,
-) -> shuttle_axum::ShuttleAxum {
+async fn axum() -> shuttle_axum::ShuttleAxum {
     let router = Router::new()
         .route("/", get(hello_world))
-        .nest_service("/assets", ServeDir::new(static_folder));
+        .nest_service("/assets", ServeDir::new(PathBuf::from("assets")));
 
     Ok(router.into())
 }
@@ -53,7 +49,6 @@ publish = false
 axum = "0.6.18"
 shuttle-axum = "0.26.0"
 shuttle-runtime = "0.26.0"
-shuttle-static-folder = "0.26.0"
 tokio = "1.28.2"
 tower-http = { version = "0.4.0", features = ["fs"] }
 ```
