--- a/examples/axum-websockets.mdx
+++ b/examples/axum-websockets.mdx
@@ -47,7 +47,7 @@ struct Response {
 }
 
 #[shuttle_runtime::main]
-async fn axum(#[shuttle_static_folder::StaticFolder] static_folder: PathBuf) -> ShuttleAxum {
+async fn axum() -> ShuttleAxum {
     let (tx, rx) = watch::channel(Message::Text("{}".to_string()));
 
     let state = Arc::new(Mutex::new(State {
@@ -83,7 +83,7 @@ async fn axum(#[shuttle_static_folder::StaticFolder] static_folder: PathBuf) -> 
 
     let router = Router::new()
         .route("/websocket", get(websocket_handler))
-        .nest_service("/", ServeDir::new(static_folder))
+        .nest_service("/", ServeDir::new(PathBuf::from("static")))
         .layer(Extension(state));
 
     Ok(router.into())
@@ -258,7 +258,6 @@ serde = { version = "1.0.163", features = ["derive"] }
 serde_json = "1.0.96"
 shuttle-axum = "0.26.0"
 shuttle-runtime = "0.26.0"
-shuttle-static-folder = "0.26.0"
 tokio = "1.28.2"
 tower-http = { version = "0.4.0", features = ["fs"] }
 ```
