--- a/getting-started/local-run.mdx
+++ b/getting-started/local-run.mdx
@@ -1,6 +1,6 @@
 ---
 title: "Local Run"
-description: "Test your Shuttle application on your local system."
+description: "Test your Shuttle app on your local system"
 ---
 
 We will assume that you have already initialized a project. If you haven't, you should
@@ -16,16 +16,17 @@ cargo shuttle run
 
 ### Local runs with databases
 
-If your project relies on a database resource, it will default to starting a [docker](https://docs.docker.com/get-docker/) 
-container for that database. If you'd like to opt out of this behavior and rather supply your own database
-URI, simply pass it in as an argument to your resource. This argument also supports insertion of secrets from `Secrets.toml`
-with string interpolation:
+If your project relies on a database resource, it will default to starting a [Docker](https://docs.docker.com/get-docker/) container for that database.
+If you'd like to opt out of this behavior and rather supply your own database URI, simply pass it in as an argument to your resource.
+This argument also supports insertion of secrets from `Secrets.toml` with string interpolation:
 
 ```rust
 #[shuttle_runtime::main]
-async fn tide(#[shuttle_aws_rds::Postgres(
+async fn tide(
+    #[shuttle_aws_rds::Postgres(
         local_uri = "postgres://postgres:{secrets.PASSWORD}@localhost:16695/postgres"
-    )] pool: PgPool) -> ShuttleTide<MyState> { ... }
+    )] pool: PgPool,
+) -> ShuttleTide<MyState> { ... }
 ```
 
 ### Expose your application to your local network
@@ -41,12 +42,11 @@ This will bind your local application to `0.0.0.0:8000`, and you will now be abl
 using your computer's local IP. If you'd also like to change the port, you can do so with the `--port`
 argument:
 
-
 ```bash
 cargo shuttle run --external --port 8123
 ```
 
-*PS: you may need to open the port your app is started on in your firewall.*
+<Note>You may need to open the port your app is started on in your firewall.</Note>
 
 ### Development Tips
 
@@ -100,4 +100,3 @@ if cfg!(debug_assertions) {
     router = router.layer(tower_livereload::LiveReloadLayer::new());
 }
 ```
-
