--- a/getting-started/quick-start.mdx
+++ b/getting-started/quick-start.mdx
@@ -31,5 +31,4 @@ cargo shuttle deploy
 
 You can also run your project locally for development, check out our [local run](./local-run) section.
 
-Feel free to build on top of the generated `hello-world` example or take a stab
-at one of our [examples](../examples/axum).
+Feel free to build on top of the generated "Hello, World!" project or check out one of our [examples](../examples/axum).
