--- a/getting-started/shuttle-commands.mdx
+++ b/getting-started/shuttle-commands.mdx
@@ -2,28 +2,20 @@
 title: "Command Line Interface"
 ---
 
-## Overview
+Interaction with the Shuttle services is through the `cargo-shuttle` Command Line Interface (CLI).
+Tasks are performed with a combination of commands, sub-commands, and options.
 
-Interaction with the Shuttle services is through the Command Line Interface (CLI).
-A combination of commands, and sub-commands, each with options, allow a variety of management tasks to be performed.
+Commands are issued in the format: `cargo shuttle [OPTIONS] <COMMAND>`
 
-Any given command is issued in the format: `cargo shuttle [OPTIONS] <COMMAND>`
-
-To get an overview of available commands and any available options, run:
+To get an overview of available commands and options, run:
 
 ```bash
 cargo shuttle help
 ```
 
-## Options
-
-*Tip: Options are entered in the format: `--name`, as an example.*
-
-Options can be passed in with commands to customize a command's, or a sub-command's, behaviour.
-
 ## Commands
 
-*Tip: Run a command with the `--help` flag to see available subcommands*
+<Tip>Run a command with the `--help` flag to see available subcommands</Tip>
 
 The Shuttle commands are:
 
