--- a/resources/shuttle-secrets.mdx
+++ b/resources/shuttle-secrets.mdx
@@ -1,5 +1,6 @@
 ---
-title: "Shuttle Secrets"
+title: "Secrets"
+description: Including secrets in your deployment
 ---
 
 This plugin manages secrets on [Shuttle](https://www.shuttle.rs).
@@ -53,7 +54,6 @@ The full example can be found on [GitHub](https://github.com/shuttle-hq/shuttle-
 
 ## Caveats
 
-- Shuttle does not yet support setting environment variables at build time.
 - Some libraries read from their own config files or environment variables,
   with no way of providing them in code. Sometimes, this can be solved by
   manually setting the variable after loading the secret (and before loading the library):
