--- a/support/faq.mdx
+++ b/support/faq.mdx
@@ -26,7 +26,7 @@ This section is aimed at collecting common questions users have to provide docum
   <Accordion title="Can I use frontend frameworks with Shuttle?">
     Of course! When you deploy a project on Shuttle, your API becomes available at a URL of the form `${project_name}.shuttleapp.rs`. And since Shuttle is compatible with any of the common frontend hosting solutions (Vercel, Netlify, etc), you just have to make your API calls to the URL of your project, and you're up.
 
-    For details on how to serve static files with Shuttle, check out our docs: [Shuttle static folder](https://docs.shuttle.rs/resources/shuttle-static-folder)
+    For details on how to serve static files with Shuttle, check out our [Deployment files docs](/configuration/files).
 
     For a tutorial on how to build & deploy a simple full-stack app using Next.js & Rust, check out this tutorial: [Deploying a NextJS frontend with Rust, in one go](https://joshmo.hashnode.dev/deploying-a-nextjs-front-end-with-a-rust-api-in-one-go)
   </Accordion>
