--- a/tutorials/serverless-calendar-app.mdx
+++ b/tutorials/serverless-calendar-app.mdx
@@ -125,7 +125,7 @@ git commit -m "Hello World"
 ```
 
 To deploy the code, I needed to sign up for a shuttle account. This can be done
-over at https://www.shuttle.rs/login.
+over at https://console.shuttle.rs/.
 
 It will ask you to authorize it to access your Github account.
 
@@ -161,7 +161,7 @@ cargo add chrono # For date and time parsing
 
 Let's create a demo calendar event:
 
-```
+```rust
 let event = Event::new()
   .summary("test event")
   .description("here I have something really important to do")
@@ -298,7 +298,7 @@ Nice, it works!
 
 Opening it in the browser creates a new event in the calendar:
 
-![][/images/serverless-calendar-app-1.avif]
+![](/images/serverless-calendar-app-1.avif)
 
 And for all the odd people who don't use a terminal to create a calendar event,
 let's also add a form to the website.
@@ -360,7 +360,7 @@ async fn calendar(Query(params): Query<HashMap<String, String>>) -> impl IntoRes
 After some more tweaking, we got ourselves a nice little form in all of its web
 1.0 glory.
 
-![Serverless Calendar app][/images/serverless-calendar-app-2.avif]
+![Serverless Calendar app](/images/serverless-calendar-app-2.avif)
 
 And that's it! We now have a little web app that can create calendar events.
 Well, almost. We still need to deploy it.
