--- a/support/faq.mdx
+++ b/support/faq.mdx
@@ -19,7 +19,7 @@ This section is aimed at collecting common questions users have to provide docum
     Your code is analyzed and built on our servers. The first time you introduce additional resources in your code, like the first time you use a database, we will add that resource to your project and wire it automatically to your deployment.
   </Accordion>
   <Accordion title="Which version of Rust will my project be compiled with?">
-    Currently all your projects are built in a container that is pinned to rustc 1.70. It's not currently possible
+    Currently all your projects are built in a container that is pinned to rustc 1.72. It's not currently possible
     for you to change this, but being able to choose which toolchain your project will be compiled with is a planned
     feature.
   </Accordion>
@@ -40,12 +40,10 @@ This section is aimed at collecting common questions users have to provide docum
     Yes, you can create a SeaORM connection from the sqlx pool Shuttle passes to you when you provision a SQL database. You can take a look at the example [here](https://github.com/shuttle-hq/shuttle/issues/179#issuecomment-1203536025).
   </Accordion>
   <Accordion title="Can I rename my Shuttle project?">
-    Certainly. Just create a `Shuttle.toml` file in the same directory where your `Cargo.toml` is and add `name = "your-project-name"`.
+    Certainly. Just create a `Shuttle.toml` file in the workspace root directory where your `Cargo.toml` is and add `name = "your-project-name"`. Read more [here](/configuration/files).
   </Accordion>
   <Accordion title="Where geographically are deployments hosted?">
     Currently, all deployments are in the eu-west2 region (London).
-  </Accordion>
-  <Accordion title="Do we plan to support multiple regions?">
     We do plan to support multiple regions, but we can't give a precise ETA yet.
   </Accordion>
 </AccordionGroup>
