--- a/support/faq.mdx
+++ b/support/faq.mdx
@@ -19,14 +19,14 @@ This section is aimed at collecting common questions users have to provide docum
     Your code is analyzed and built on our servers. The first time you introduce additional resources in your code, like the first time you use a database, we will add that resource to your project and wire it automatically to your deployment.
   </Accordion>
   <Accordion title="Which version of Rust will my project be compiled with?">
-    Currently all your projects are built in a container that is pinned to rustc 1.70. It's not currently possible
+    Currently all your projects are built in a container that is pinned to rustc 1.72. It's not currently possible
     for you to change this, but being able to choose which toolchain your project will be compiled with is a planned
     feature.
   </Accordion>
   <Accordion title="Can I use frontend frameworks with Shuttle?">
     Of course! When you deploy a project on Shuttle, your API becomes available at a URL of the form `${project_name}.shuttleapp.rs`. And since Shuttle is compatible with any of the common frontend hosting solutions (Vercel, Netlify, etc), you just have to make your API calls to the URL of your project, and you're up.
 
-    For details on how to serve static files with Shuttle, check out our docs: [Shuttle static folder](https://docs.shuttle.rs/resources/shuttle-static-folder)
+    For details on how to serve static files with Shuttle, check out our [Deployment files docs](/configuration/files).
 
     For a tutorial on how to build & deploy a simple full-stack app using Next.js & Rust, check out this tutorial: [Deploying a NextJS frontend with Rust, in one go](https://joshmo.hashnode.dev/deploying-a-nextjs-front-end-with-a-rust-api-in-one-go)
   </Accordion>
@@ -40,12 +40,10 @@ This section is aimed at collecting common questions users have to provide docum
     Yes, you can create a SeaORM connection from the sqlx pool Shuttle passes to you when you provision a SQL database. You can take a look at the example [here](https://github.com/shuttle-hq/shuttle/issues/179#issuecomment-1203536025).
   </Accordion>
   <Accordion title="Can I rename my Shuttle project?">
-    Certainly. Just create a `Shuttle.toml` file in the same directory where your `Cargo.toml` is and add `name = "your-project-name"`.
+    Certainly. Just create a `Shuttle.toml` file in the workspace root directory where your `Cargo.toml` is and add `name = "your-project-name"`. Read more [here](/configuration/files).
   </Accordion>
   <Accordion title="Where geographically are deployments hosted?">
     Currently, all deployments are in the eu-west2 region (London).
-  </Accordion>
-  <Accordion title="Do we plan to support multiple regions?">
     We do plan to support multiple regions, but we can't give a precise ETA yet.
   </Accordion>
 </AccordionGroup>
