--- a/resources/overview.mdx
+++ b/resources/overview.mdx
@@ -2,7 +2,7 @@
 title: "Overview"
 ---
 
-The next sections go over one by one the the resources currently supported by Shuttle. In broad terms, for the resource needed, simply mark up your code with the appropriate annotation. This is very powerful and brings several benefits:
+The next sections go over one by one the resources currently supported by Shuttle. In broad terms, for the resource needed, simply mark up your code with the appropriate annotation. This is very powerful and brings several benefits:
 
 - simplicity
 - receive a database by writing a simple annotation
