--- a/examples/rocket.mdx
+++ b/examples/rocket.mdx
@@ -12,6 +12,12 @@ This section revolves around simple Rocket examples you can get quickly started 
 
 <Tip>If you are looking for step-by-step guides, check out our [How To](../tutorials) section.</Tip>
 
+You can clone the example below by running the following (you'll need `cargo-shuttle` installed):
+```bash
+cargo shuttle init --from https://github.com/shuttle-hq/shuttle-examples.git \
+ --subfolder rocket/hello-world
+```
+
 <CodeGroup>
 ```rust main.rs
 #[macro_use]
