--- a/examples/actix-static-files.mdx
+++ b/examples/actix-static-files.mdx
@@ -11,6 +11,12 @@ This section revolves around simple Actix examples you can get quickly started w
 
 <Tip>If you are looking for step-by-step guides, check out our [How To](../tutorials) section.</Tip>
 
+You can clone the example below by running the following (you'll need `cargo-shuttle` installed):
+```bash
+cargo shuttle init --from https://github.com/shuttle-hq/shuttle-examples.git \
+ --subfolder actix-web/static-files
+```
+
 <CodeGroup>
 ```rust src/main.rs
 use actix_web::{get, web::ServiceConfig};
