--- a/examples/actix-websocket-actorless.mdx
+++ b/examples/actix-websocket-actorless.mdx
@@ -4,6 +4,12 @@ title: "Actix WebSocket Actorless"
 
 This example shows how to use a WebSocket to show the live status of the Shuttle API on a web page. The app also provides an echo service and notifies when the number of connected users change.
 
+You can clone the example below by running the following (you'll need `cargo-shuttle` installed):
+```bash
+cargo shuttle init --from https://github.com/shuttle-hq/shuttle-examples.git \
+ --subfolder actix-web/websocket-actorless
+```
+
 <CodeGroup>
 ```rust src/main.rs
 use actix_files::NamedFile;
@@ -400,5 +406,9 @@ shuttle-actix-web = "0.27.0"
 shuttle-runtime = "0.27.0"
 tokio = { version = "1", features = ["rt-multi-thread", "sync"] }
 tracing = "0.1"
+```
+
+```toml Shuttle.toml
+assets = ["static/*"]
 ```
 </CodeGroup>
