--- a/examples/axum-jwt-authentication.mdx
+++ b/examples/axum-jwt-authentication.mdx
@@ -8,16 +8,17 @@ Then the JWT is sent with all requests requiring authentication using the HTTP h
 
 This example uses the [`jsonwebtoken`](https://github.com/Keats/jsonwebtoken) which supports symmetric and asymmetric secret encoding, built-in validations, and most JWT algorithms.
 
+You can clone the example below by running the following (you'll need `cargo-shuttle` installed):
+```bash:
+cargo shuttle init --from https://github.com/shuttle-hq/shuttle-examples.git \
+ --subfolder axum/jwt-authentication
+```
+
 ### src/main.rs
 Three Rocket routes are registered in this file:
 1. `/public`: a route that can be called without needing any authentication.
 1. `/login`: a route for posting a JSON object with a username and password to get a JWT.
 1. `/private`: a route that can only be accessed with a valid JWT.
-
-### src/claims.rs
-The bulk of this example is in this file. Most of the code can be transferred to other frameworks except for the `FromRequest` implementation, which is Rocket specific.
-This file contains a `Claims` object which can be expanded with more claims. A `Claims` can be created from a `Bearer <token>` string using `Claims::from_authorization()`.
-And a `Claims` object can also be converted to a token using `to_token()`.
 
 ```toml Cargo.toml
 [package]
@@ -25,16 +26,16 @@ name = "authentication"
 version = "0.1.0"
 edition = "2021"
 
-
 [dependencies]
-chrono = "0.4.23"
-jsonwebtoken = { version = "8.1.1", default-features = false }
-lazy_static = "1.4.0"
-rocket = { version = "0.5.0-rc.2", features = ["json"] }
-serde = { version = "1.0.148", features = ["derive"] }
-shuttle-rocket = "0.27.0"
+axum = { version = "0.6.18", features = ["headers"] }
+jsonwebtoken = "8.3.0"
+once_cell = "1.18.0"
+serde = { version = "1.0.188", features = ["derive"] }
+serde_json = "1.0.107"
+shuttle-axum = "0.27.0"
 shuttle-runtime = "0.27.0"
-tokio = "1.26.0"
+tokio = "1.28.2"
+tracing-subscriber = "0.3.17"
 ```
 Your `main.rs` should look like this:
 
@@ -42,23 +43,20 @@ Your `main.rs` should look like this:
 use axum::{
     async_trait,
     extract::FromRequestParts,
+    headers::{authorization::Bearer, Authorization},
     http::{request::Parts, StatusCode},
     response::{IntoResponse, Response},
     routing::{get, post},
-    Json, RequestPartsExt, Router,
-};
-use axum_extra::{
-    headers::{authorization::Bearer, Authorization},
-    TypedHeader,
+    Json, RequestPartsExt, Router, TypedHeader,
 };
 use jsonwebtoken::{decode, encode, DecodingKey, EncodingKey, Header, Validation};
 use once_cell::sync::Lazy;
 use serde::{Deserialize, Serialize};
 use serde_json::json;
 use std::fmt::Display;
-use tracing_subscriber::{layer::SubscriberExt, util::SubscriberInitExt};
 
 static KEYS: Lazy<Keys> = Lazy::new(|| {
+// note that in production, you will probably want to use a random SHA-256 hash or similar 
     let secret = "JWT_SECRET".to_string();
     Keys::new(secret.as_bytes())
 });
@@ -66,20 +64,26 @@ static KEYS: Lazy<Keys> = Lazy::new(|| {
 #[shuttle_runtime::main]
 async fn main() -> shuttle_axum::ShuttleAxum {
     let app = Router::new()
-        .route("/protected", get(protected))
-        .route("/authorize", post(authorize));
+        .route("/public", get(public))
+        .route("/private", get(private))
+        .route("/login", post(login));
 
-	Ok(app.into())
+    Ok(app.into())
 }
 
-async fn protected(claims: Claims) -> Result<String, AuthError> {
+async fn public() -> &'static str {
+    // A public endpoint that anyone can access
+    "Welcome to the public area :)"
+}
+
+async fn private(claims: Claims) -> Result<String, AuthError> {
     // Send the protected data to the user
     Ok(format!(
         "Welcome to the protected area :)\nYour data:\n{claims}",
     ))
 }
 
-async fn authorize(Json(payload): Json<AuthPayload>) -> Result<Json<AuthBody>, AuthError> {
+async fn login(Json(payload): Json<AuthPayload>) -> Result<Json<AuthBody>, AuthError> {
     // Check if the user sent the credentials
     if payload.client_id.is_empty() || payload.client_secret.is_empty() {
         return Err(AuthError::MissingCredentials);
@@ -88,11 +92,15 @@ async fn authorize(Json(payload): Json<AuthPayload>) -> Result<Json<AuthBody>, A
     if payload.client_id != "foo" || payload.client_secret != "bar" {
         return Err(AuthError::WrongCredentials);
     }
+
+    // add 5 minutes to current unix epoch time as expiry date/time
+    let exp = SystemTime::now().duration_since(SystemTime::UNIX_EPOCH).as_secs() + 300; 
+    
     let claims = Claims {
         sub: "b@b.com".to_owned(),
         company: "ACME".to_owned(),
         // Mandatory expiry time as UTC timestamp
-        exp: 2000000000, // May 2033
+        exp: usize::try_from(exp).unwrap()
     };
     // Create the authorization token
     let token = encode(&Header::default(), &claims, &KEYS.encoding)
@@ -102,12 +110,14 @@ async fn authorize(Json(payload): Json<AuthPayload>) -> Result<Json<AuthBody>, A
     Ok(Json(AuthBody::new(token)))
 }
 
+// allow us to print the claim details for the private route
 impl Display for Claims {
     fn fmt(&self, f: &mut std::fmt::Formatter<'_>) -> std::fmt::Result {
         write!(f, "Email: {}\nCompany: {}", self.sub, self.company)
     }
 }
 
+// implement a method to create a response type containing the JWT
 impl AuthBody {
     fn new(access_token: String) -> Self {
         Self {
@@ -117,6 +127,8 @@ impl AuthBody {
     }
 }
 
+// implement FromRequestParts for Claims (the JWT struct)
+// FromRequestParts allows us to use Claims without consuming the request
 #[async_trait]
 impl<S> FromRequestParts<S> for Claims
 where
@@ -138,6 +150,7 @@ where
     }
 }
 
+// implement IntoResponse for AuthError so we can use it as an Axum response type
 impl IntoResponse for AuthError {
     fn into_response(self) -> Response {
         let (status, error_message) = match self {
@@ -153,6 +166,7 @@ impl IntoResponse for AuthError {
     }
 }
 
+// encoding/decoding keys - set in the static `once_cell` above 
 struct Keys {
     encoding: EncodingKey,
     decoding: DecodingKey,
@@ -167,6 +181,7 @@ impl Keys {
     }
 }
 
+// the JWT claim
 #[derive(Debug, Serialize, Deserialize)]
 struct Claims {
     sub: String,
@@ -174,18 +189,21 @@ struct Claims {
     exp: usize,
 }
 
+// the response that we pass back to HTTP client once successfully authorised
 #[derive(Debug, Serialize)]
 struct AuthBody {
     access_token: String,
     token_type: String,
 }
 
+// the request type - "client_id" is analogous to a username, client_secret can also be interpreted as a password
 #[derive(Debug, Deserialize)]
 struct AuthPayload {
     client_id: String,
     client_secret: String,
 }
 
+// error types for auth errors 
 #[derive(Debug)]
 enum AuthError {
     WrongCredentials,
@@ -224,7 +242,7 @@ So let's get a JWT from the login route first:
 
 
 ```sh
-$ curl --request POST --data '{"username": "username", "password": "password"}' https://<host>/login
+$ curl --request POST --data '{"client_id": "foo", "client_secret": "bar"}' https://<host>/login
 ```
 
 Accessing the private endpoint with the token will now succeed:
