--- a/examples/axum-postgres.mdx
+++ b/examples/axum-postgres.mdx
@@ -4,20 +4,35 @@ title: "Postgres Todo App"
 
 This example shows how to make a simple TODO app using Axum and a shared Shuttle Postgres DB.
 
+The following routes are provided:
+```
+- GET /todos/<id> - Get a to-do item by ID.
+- POST /todos - Create a to-do item. Takes "note" as a JSON body parameter.
+```
+
+You can clone the example below by running the following (you'll need `cargo-shuttle` installed):
+```bash:
+cargo shuttle init --from https://github.com/shuttle-hq/shuttle-examples.git \
+ --subfolder axum/postgres
+```
+
 <CodeGroup>
 ```rust src/main.rs
-#[macro_use]
-extern crate rocket;
-
-use rocket::response::status::BadRequest;
-use axum::{Json, extract::{Path, State}, http::StatusCode};
-use rocket::State;
+use axum::{Json, 
+	extract::{Path, State}, 
+	http::StatusCode, 
+	response::IntoResponse, 
+	Router, 
+	routing::get};
 use serde::{Deserialize, Serialize};
 use shuttle_runtime::CustomError;
-use sqlx::{Executor, FromRow, PgPool};
+use sqlx::{FromRow, PgPool};
 
-async fn retrieve(id: i32, state: &State<MyState>) -> Result<impl IntoResponse, impl IntoResponse> {
-    match sqlx::query_as("SELECT * FROM todos WHERE id = $1")
+async fn retrieve(
+	Path(id): Path<i32>, 
+	State(state): State<MyState>
+	) -> Result<impl IntoResponse, impl IntoResponse> {
+    match sqlx::query_as::<_, Todo>("SELECT * FROM todos WHERE id = $1")
         .bind(id)
         .fetch_one(&state.pool)
         .await {
@@ -27,11 +42,12 @@ async fn retrieve(id: i32, state: &State<MyState>) -> Result<impl IntoResponse, 
 }
 
 async fn add(
+    State(state): State<MyState>,
     Json(data): Json<TodoNew>,
-    state: &State<MyState>,
-) -> Result<Json<Todo>, BadRequest<String>> {
-    match sqlx::query_as("INSERT INTO todos(note) VALUES ($1) RETURNING id, note")
-        .bind(&data.note)
+) -> Result<impl IntoResponse, impl IntoResponse> {
+    match sqlx::query_as::<_, Todo>(
+	"INSERT INTO todos (note) VALUES ($1) RETURNING id, note"
+	).bind(&data.note)
         .fetch_one(&state.pool)
         .await {
 		Ok(todo) => Ok((StatusCode::CREATED, Json(todo))),
@@ -39,14 +55,16 @@ async fn add(
 	}
 }
 
-#[Derive(Clone)]
+#[derive(Clone)]
 struct MyState {
     pool: PgPool,
 }
 
 #[shuttle_runtime::main]
-async fn axum(#[shuttle_shared_db::Postgres] pool: PgPool) -> shuttle_axum::ShuttleAxum {
-    pool.execute(include_str!("../schema.sql"))
+async fn axum(
+	#[shuttle_shared_db::Postgres] pool: PgPool
+	) -> shuttle_axum::ShuttleAxum {
+    sqlx::migrate!().run(&pool)
         .await
         .map_err(CustomError::new)?;
 
@@ -70,7 +88,7 @@ struct Todo {
 }
 ```
 
-```sql schema.sql
+```sql migrations/schema.sql
 DROP TABLE IF EXISTS todos;
 
 CREATE TABLE todos (
@@ -87,7 +105,7 @@ edition = "2021"
 
 [dependencies]
 axum = "0.6.18"
-serde = "1.0.148"
+serde = { version = "1.0.148", features = ["derive"] }
 shuttle-shared-db = { version = "0.27.0", features = ["postgres"] }
 shuttle-axum = "0.27.0"
 shuttle-runtime = "0.27.0"
