--- a/examples/axum-websockets.mdx
+++ b/examples/axum-websockets.mdx
@@ -4,6 +4,11 @@ title: "WebSockets"
 
 This example shows how to use a WebSocket to show the live status of the Shuttle API on a web page.
 
+You can clone the example below by running the following (you'll need `cargo-shuttle` installed):
+```bash
+cargo shuttle init --from https://github.com/shuttle-hq/shuttle-examples.git \
+ --subfolder axum/websocket
+```
 
 <CodeGroup>
 ```rust src/main.rs
@@ -267,5 +272,9 @@ shuttle-axum = "0.27.0"
 shuttle-runtime = "0.27.0"
 tokio = "1.28.2"
 tower-http = { version = "0.4.0", features = ["fs"] }
+```
+
+```toml Shuttle.toml
+assets = ["static/*"]
 ```
 </CodeGroup>
