--- a/examples/rocket-jwt-authentication.mdx
+++ b/examples/rocket-jwt-authentication.mdx
@@ -9,6 +9,12 @@ Then the JWT is sent with all requests requiring authentication using the HTTP h
 This example uses the [`jsonwebtoken`](https://github.com/Keats/jsonwebtoken) which supports symmetric and asymmetric secret encoding, built-in validations, and most JWT algorithms.
 However, this example only makes use of symmetric encoding and validation on the expiration claim.
 
+You can clone the example below by running the following (you'll need `cargo-shuttle` installed):
+```bash
+cargo shuttle init --from https://github.com/shuttle-hq/shuttle-examples.git \
+ --subfolder rocket/jwt-authentication
+```
+
 ### src/main.rs
 Three Rocket routes are registered in this file:
 1. `/public`: a route that can be called without needing any authentication.
