--- a/examples/rocket-postgres.mdx
+++ b/examples/rocket-postgres.mdx
@@ -4,6 +4,18 @@ title: "Postgres Todo App"
 
 This example shows how to make a simple TODO app using Rocket and a shared Shuttle Postgres DB.
 
+The following routes are provided:
+```
+GET /todos/<id> - Get a to-do item by ID.
+POST /todos - Create a to-do item. Takes "note" as a JSON body parameter.
+```
+
+You can clone the example below by running the following (you'll need `cargo-shuttle` installed):
+```bash
+cargo shuttle init --from https://github.com/shuttle-hq/shuttle-examples.git \
+ --subfolder rocket/postgres
+```
+
 <CodeGroup>
 ```rust src/main.rs
 #[macro_use]
@@ -53,7 +65,7 @@ async fn rocket(#[shuttle_shared_db::Postgres] pool: PgPool) -> shuttle_rocket::
 
     let state = MyState { pool };
     let rocket = rocket::build()
-        .mount("/todo", routes![retrieve, add])
+        .mount("/todos", routes![retrieve, add])
         .manage(state);
 
     Ok(rocket.into())
